--- a/options.html
+++ b/options.html
@@ -85,6 +85,10 @@
                 自动折叠：&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<input type="radio" name="fold" value="" disabled="disabled" />开启
                         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<input type="radio" name="fold" value="f" disabled="disabled" />关闭
             </form></li>
+            <li><form name="realDateSelect">
+                绝对时间：&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<input type="radio" name="realDate" value="t" disabled="disabled" />开启
+                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<input type="radio" name="realDate" value="" disabled="disabled" />关闭
+            </form></li>            
             <li><form name="autoLoginWeiboSelect">
                 定时激活微博：&emsp;&emsp;&emsp;&emsp;&emsp;<input type="radio" name="autoLoginWeibo" value="t" disabled="disabled" />开启
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<input type="radio" name="autoLoginWeibo" value="" disabled="disabled" />关闭&emsp;&emsp;&emsp;（未得到充分验证的实验性功能）
